# Junkbox

./: CMakeLists.txt  main.cpp
AirGround/: CMakeLists.txt  main.cpp
Calibrate/: CMakeLists.txt  Calibrate.cpp  CalibrateCircles.cpp  SaveMvlCamModel.h  StereoCalibrate.cpp
DESM/: CMakeLists.txt  DESM.cpp  GLImgPlane.h  GLMosaic.h  LinearSystem.cpp  LinearSystem.h
DESM_FD/: DESM.cpp  GLMosaic.h
DTrack/: CMakeLists.txt  DTrack.cpp  GLPath.h
DTrack/Applications/: CMakeLists.txt
DTrack/Applications/DTrackVicon/: CMakeLists.txt  DTrackApp.h  Gui.h  main.cpp
DTrack/Applications/FastLoc/: CMakeLists.txt  DTrackApp.h  Gui.h  main.cpp
DTrack/Applications/KinectLoop/: CMakeLists.txt  DTrackApp.h  Gui.h  GuiConfig.h  main.cpp
DTrack/CMakeModules/: FindEigen3.cmake
DTrack/DenseBackEnd/: CMakeLists.txt  DenseBackEnd.cpp  DenseBackEnd.h  DenseBackEndConfig.h
DTrack/DenseFrontEnd/: CMakeLists.txt  Common.h  DTrackConfig.h  DTrackVicon.cpp  DTrackVicon.h  DTrackViconConfig.h  DenseFrontEnd.cpp  DenseFrontEnd.h  DenseFrontEndConfig.h  FastLocalizer.cpp  FastLocalizer.h  FastLocalizerConfig.h  GpuHelpers.cpp  GpuHelpers.h  ImageHelpers.h  Keyframes.cpp  Timer.h
DTrack/DenseMap/: CMakeLists.txt  DenseMap.cpp  DenseMap.h  ReferenceFrame.cpp  ReferenceFrame.h  TransformEdge.cpp  TransformEdge.h
DTrack/GLObjects/: GLMap.h  GLPath.h  GLPyrPath.h
DTrack/GUI/: AnalyticsView.h  ColorPalette.h  GLKeyframe.h  GLMap.h  GLPath.h  GLSimpleObjects.h  GLVarHistory.h  GLVicon.h  TimerView.h
DTrack/Utils/: CVarHelpers.h  CamModelPyramid.h  ImageHelpers.h  InitCamera.h  StreamHelpers.h  VehicleConfig.h
DecodeWHDMI/: CMakeLists.txt  main.cpp
DenseKeyTracker/: CMakeLists.txt  main.cpp
DensePoseRefinement/: CMakeLists.txt  DensePR.cpp  DensePRwRU.cpp  GLImgPlane.h  LinearSystem.cpp  LinearSystem.h  LinearSystemRU.cpp  LinearSystemRU.h
DenseTracker/: CMakeLists.txt  CVarHelpers.h  Common.h  DTrack.cpp  GLPath.h  GpuHelpers.h  InitCamera.h  Keyframes.h  LinearSystem.cpp  LinearSystem.h  LinearSystemRU.cpp  LinearSystemRU.h  ParseArgs.h  ParseCamArgs.h  StreamHelpers.h
DenseTrackerCUDA/: CMakeLists.txt  main.cpp
DiskLogger/: CMakeLists.txt  DiskLogger.cpp  DiskLogger.h  Logger.cpp
DiskLogger/cmake_modules/: Common.cmake
ELAS/: CMakeLists.txt
Embedded/CamSync/: CMakeLists.txt  CamSync.cpp
Embedded/NodeRelay/: CMakeLists.txt  NodeRelay.cpp
Embedded/NodeRelay/cmake_modules/: AndroidUtils.cmake  FindFTDI.cmake
Format7/: CMakeLists.txt  main.cpp
FuseIV/: CMakeLists.txt  CarPlannerCommon.h  FuseIV.cpp  GLPath.h  SensorFusion.cpp  SensorFusion.h
Gooey/: Node.h
Gumstix/NodeRelay/: CMakeLists.txt  FtdiDriver.h  Node.h  NodeRelay.cpp  main.cpp
GwSim/: CMakeLists.txt  Node.h  fileWriter.cpp  main.cpp  rpg_config.xml
HDCapture/: CMakeLists.txt  CaptureDelegate.cpp  CaptureDelegate.h  HDCapture.cpp  Node.h
Hermes1.0/: CMakeLists.txt  Node.h  node1.cpp  node2.cpp
Hermes2.0/: CMakeLists.txt  Messages.proto  node1.cpp  node2.cpp
Kinect/: CMakeLists.txt  kinect.cpp
Kinect/cmake_modules/: FindOpenNI.cmake
KinectRPG/: CMakeLists.txt  main.cpp
MATLAB/: AirGround.m  AirGround2.m  GeneratePath4MeshLogger.m  ParabTraj.m  TInv.m  generateTrajectory.m
MATLAB/SpaceWarping/: AddNoise.m  FiniteDiff.m  GaussNewton.m  GenSim.m  Jacs.m  SpaceWarping.m
MATLAB/Toolbox/: plot_3d_cf.m  plot_3d_path.m  rotmat_to_eulerPQR.m  tcomp.mexmaci64  tinv.mexmaci64
MeshLogger/: CMakeLists.txt  ImageExporter.cpp  ImageExporter.h  MeshLogger.cpp
Nodes/: CMakeLists.txt  Node.h  Testmsgs.pb.cc  Testmsgs.pb.h  Testmsgs.proto  main.cpp  n1.cpp  n2.cpp  node1.cpp  node2.cpp
Octomap/: CMakeLists.txt  FindOctomap.cmake  main.cpp
PgCapture/: CMakeLists.txt  Makefile  PgCapture.cpp
Plotter/: CMakeLists.txt  Command.proto  Plotter.cpp  main.cpp
Slam/: main.cpp
TestCam/: CMakeLists.txt  main.cpp
Thumbs/: CMakeLists.txt  Thumbnails.cpp  Thumbnails.h  main.cpp
VboGenerator/: CMakeLists.txt  main.cpp
Viconize/: CMakeLists.txt  README  main.cpp
