OPTION( BUILD_KINECT_LOOP "Build KinectLoop" ON)
OPTION( BUILD_DTRACK_VICON "Build DTrackVicon" ON)
OPTION( BUILD_FAST_LOC "Build FastLoc" ON)

IF( BUILD_KINECT_LOOP )
  ADD_SUBDIRECTORY( KinectLoop )
ENDIF()

IF( BUILD_FAST_LOC )
  ADD_SUBDIRECTORY( FastLoc )
ENDIF()

IF( BUILD_DTRACK_VICON )
  ADD_SUBDIRECTORY( DTrackVicon )
ENDIF()
