FIND_PACKAGE( Eigen3 REQUIRED )
FIND_PACKAGE( Sophus REQUIRED )
FIND_PACKAGE( RPG REQUIRED )
FIND_PACKAGE( MVL REQUIRED )
FIND_PACKAGE( CVARS REQUIRED )
#FIND_PACKAGE( Kangaroo REQUIRED )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${EIGEN3_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${Sophus_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${RPG_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${MVL_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${CVARS_INCLUDE_DIR} )
#INCLUDE_DIRECTORIES( ${Kangaroo_INCLUDE_DIRS} )

SET( DENSE_FRONT_END_HDRS
        DenseFrontEnd.h
        DenseFrontEndConfig.h

   )

SET( DENSE_FRONT_END_SRCS
        DenseFrontEnd.cpp
   )

ADD_LIBRARY( DenseFrontEnd ${DENSE_FRONT_END_HDRS} ${DENSE_FRONT_END_SRCS} )
